# Operating-Systems-Course-Exercises

./: .gitignore  README.md
Ex01/: CMakeLists.txt  New Text Document.txt  README.md  memory_latency.cpp  memory_latency.h  plot_example.py
Ex01/graphs/: README.txt  diff_val.csv  r1.csv  r2.csv  r3.csv
Ex02/: CMakeLists.txt  Makefile  README.md  thread.cpp  thread.h  uthreads.cpp  uthreads.h
Ex03/: CMakeLists.txt  Makefile  MapReduceClient.h  MapReduceFramework.cpp  MapReduceFramework.h  README.md
Ex03/Barrier/: Barrier.cpp  barrierdemo.cpp
Ex04/: CMakeLists.txt  Makefile  README.md  VirtualMemory.cpp
